# AutoTraceV2

./: CMakeLists.txt  README.md
QtAutoTrace/: QtAutoTrace.pro  adjacentpixels.cpp  adjacentpixels.h  adjacentpoints.cpp  adjacentpoints.h  config.qdocconf  doc.qhp  generictinputreader.cpp  generictinputreader.h  inputoptions.h  inputparser.cpp  inputparser.h  main.cpp  outputoptions.h  pixeldata.h  pixelgroup.cpp  pixelgroup.h  signalexception.cpp  signalexception.h  splinelistarray.cpp  splinelistarray.h  svgelement.cpp  svgelement.h  svgelementfactory.cpp  svgelementfactory.h  terminalhelper.cpp  terminalhelper.h  terminalsequences.h
QtAutoTrace/Exceptions/: filenotfoundexception.h  filereadexception.h  notimplementedexception.h
QtAutoTrace/QtAutoTraceGui/: HomeForm.ui.qml  HomeForm.ui.qmlc  LabeledInput.qml  LoadingPage.ui.qml  Page1Form.ui.qmlc  Page2Form.ui.qmlc  QtAutoTraceGui.pro  ResultsPage.ui.qml  guiModel.js  main.cpp  main.qml  main.qmlc  qml.qrc
src/: bitmap.cpp  bitmap.h  bitmapreader.cpp  bitmapreader.h  color.cpp  color.h  command.cpp  command.h  commandhandler.cpp  commandhandler.h  common.h  curve.cpp  curve.h  curvelist.cpp  curvelist.h  curvelistarray.cpp  curvelistarray.h  despeckle.cpp  despeckle.h  distancemap.cpp  distancemap.h  filewrapper.cpp  filewrapper.h  fittingoptions.cpp  fittingoptions.h  inputoptions.cpp  inputoptions.h  inputreader.h  main.cpp  outputoptions.cpp  outputoptions.h  outputwriter.h  pixel.h  pixeloutline.cpp  pixeloutline.h  pixeloutlinelist.cpp  pixeloutlinelist.h  quantize.cpp  quantize.h  realcoord.cpp  (+13 more)
(+36 files in other folders)
